[package]
name = "data-analysis-with-rust"
version = "0.1.0"
authors = ["KeisukeToyota <hm.pudding0715@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.3.0"
plotly = "0.6.0"
nanoid = "0.3.0"
